# Legacy_ai_kernel

./: README.md
legacy_ai_kernel/: Cargo.toml  README.md  build.rs
legacy_ai_kernel/examples/: legacy_llm.rs
legacy_ai_kernel/src/: lib.rs  main.rs
legacy_ai_kernel/src/cpu/: mod.rs
legacy_ai_kernel/src/gpu/: batching.rs  mod.rs
legacy_ai_kernel/src/memory/: mod.rs  paged_kv.rs
legacy_ai_kernel/src/quantization/: gguf.rs  int4.rs  mod.rs
legacy_ai_kernel/tests/: integration_test.rs
legacy_ai_kernel/zig_bindings/: Cargo.toml  build.rs
legacy_ai_kernel/zig_bindings/src/: lib.rs  zig_quantization.c
